2007-08-08  Glenn Morris  <rgm@gnu.org>

	* url-auth.el, url-cache.el, url-dav.el, url-file.el, vc-dav.el:
	Replace `iff' in doc-strings and comments.

2007-07-25  Glenn Morris  <rgm@gnu.org>

	* Relicense all FSF files to GPLv3 or later.

2007-06-12  Tom Tromey  <tromey@redhat.com>

	* url.el (url-configuration-directory): Use user-emacs-directory.

2007-06-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-cookie.el (url-cookie-name, url-cookie-value)
	(url-cookie-expires, url-cookie-localpart, url-cookie-domain)
	(url-cookie-secure, url-cookie-set-name, url-cookie-set-value)
	(url-cookie-set-expires, url-cookie-set-localpart)
	(url-cookie-set-domain, url-cookie-set-secure)
	(url-cookie-retrieve-arg, url-cookie-create, url-cookie-p): Remove.
	(url-cookie): New struct.
	(url-cookie-store): Use setf instead of url-cookie-set-*.

2007-05-29  Chong Yidong  <cyd@stupidchicken.com>

	* url-mailto.el (url-mailto): Insert body after
	mail-header-separator if present, so that it is before signature.
	Suggested by Leo <sdl.web@gmail.com>.

2007-04-15  Chong Yidong  <cyd@stupidchicken.com>

	* url-parse.el (url-generic-parse-url): Revert 2006-10-09 changes.

2007-04-13  Chong Yidong  <cyd@stupidchicken.com>

	* url-http.el (url-http-parse-headers): Stop after a set number of
	redirections.  Suggested by Diane Murray.

	* url-vars.el (url-max-redirections): New var.

2007-04-01  Diane Murray  <disumu@x3y2z1.net>  (tiny change)

	* url-http.el (url-http-handle-cookies): Reverse list returned by
	`mail-fetch-field', so that cookies are set in the correct order.

	* url-cookie.el (url-cookie-retrieve, url-cookie-host-can-set-p):
	Deal with wildcard dots in domain values.

2007-03-31  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* url-http.el (url-http-mark-connection-as-busy)
	(url-http-mark-connection-as-free): Clear query-on-exit flag on
	idle connections.

2007-02-04  Chong Yidong  <cyd@stupidchicken.com>

	* url-http.el (url-http-connection-opened): New variable.