@@ -1,3 +1,14 @@
+2007-08-31  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* url-parse.el (url): Use defstruct rather than macros.
+	(url-generic-parse-url):
+	* url-util.el (url-normalize-url, url-truncate-url-for-viewing):
+	* url-methods.el (url-scheme-register-proxy):
+	* url-mailto.el (url-mailto):
+	* url-file.el (url-file-build-filename):
+	* url-expand.el (url-identity-expander, url-default-expander):
+	Update all callers.
+
 2007-08-08  Glenn Morris  <rgm@gnu.org>
 
 	* url-auth.el, url-cache.el, url-dav.el, url-file.el, vc-dav.el:
